--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "graphql:compile": "graphql-codegen",
+    "graphql:watch": "graphql-codegen -w"
   },
   "dependencies": {
     "@apollo/client": "3.9.0-rc.1",
@@ -17,6 +19,10 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/client-preset": "4.1.0",
+    "@graphql-typed-document-node/core": "3.2.0",
+    "@parcel/watcher": "2.4.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
