--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "graphql": "16.8.1",
     "next": "14.1.0",
     "react": "^18",
+    "react-cool-virtual": "0.7.0",
     "react-dom": "^18"
   },
   "devDependencies": {
